<resources>
    <string name="app_name">EcoShop</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="lorem_login">Welcome back A Lorem Ipsum text generator is specifically designed to generate a dummy text or placeholder text. Username password Login</string>
    <string name="fill_username">please enter your UserName</string>
    <string name="fill_password">please enter your Password</string>
    <string name="login_successful">login Successful</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="sorting">sorting:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">descending</string>
    <string name="product_details">product details</string>
    <string name="dollorSignWithPrice">$ %s</string>
    <string name="priceSignWithDollor">%s  $</string>
    <string name="add_to_cart">add to cart</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="category">category</string>
    <string name="imageUrl">image Url</string>
    <string name="price">price</string>
    <string name="price2">price : </string>
    <string name="cancel">cancel</string>
    <string name="add_product">add product</string>
    <string name="system_error">"system error "</string>
    <string name="add_product_msg_success">Your product has been successfully registered</string>
    <string name="category_">category : %s</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="name">Name</string>
    <string name="total">Total</string>
    <string name="cash">Cash</string>
    <string name="loan">Loan</string>
    <string name="total_amount">Total Amount :</string>
    <string name="_3_months">3 months</string>
    <string name="_6_months">6 months</string>
    <string name="_12_months">12 months</string>
    <string name="_20_intersts">20%  interests</string>
    <string name="_5_intersts">5%   interests</string>
    <string name="_10_intersts">10%  interests</string>
    <string name="proceed_to_check_out">proceed to Check Out</string>
    <string name="card_number">card Number</string>
    <string name="card_number2">card Number :</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="e_pass">E-Pass</string>
    <string name="cvv2">Cvv2</string>
    <string name="check_out">check Out</string>
    <string name="tracking_code">Tracking Code :</string>
    <string name="complete_transaction">complete transaction</string>
    <string name="please_fill_this_field">please fill this field</string>
    <string name="error_url_not_valid">please enter valid url start with http:// or https://</string>

</resources>