<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="32dp"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorCustomGreenContainer"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTickSuccess"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_tick_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnCustomGreenContainer" />

            <TextView
                android:id="@+id/lblSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/add_product_msg_success"
                android:textAlignment="center"
                android:textColor="?attr/colorOnCustomGreenContainer"
                android:textAppearance="@style/TextAppearance.EcoShop.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgTickSuccess" />

            <View
                android:id="@+id/viewLineBreak"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="?attr/colorOnCustomGreenContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblSuccess" />

            <TextView
                android:id="@+id/lblTotalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.EcoShop.Body1"
                android:textColor="?attr/colorOnCustomGreenContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewLineBreak"
                android:text="@string/total_amount" />

            <TextView
                android:id="@+id/lblCardNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:maxLines="4"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnCustomGreenContainer"

                app:layout_constraintStart_toStartOf="@+id/lblTotalAmount"
                app:layout_constraintTop_toBottomOf="@id/lblTotalAmount"
               android:text="@string/card_number2"/>

            <TextView
                android:id="@+id/lblTrackingCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:maxLines="1"
                android:text="@string/tracking_code"
                android:textAppearance="@style/TextAppearance.EcoShop.Body1"
                android:textColor="?attr/colorOnCustomGreenContainer"
                app:layout_constraintStart_toStartOf="@+id/lblTotalAmount"
                app:layout_constraintTop_toBottomOf="@id/lblCardNumber" />

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="1.64 $"
                android:textAppearance="@style/TextAppearance.EcoShop.Body1"
                android:layout_marginEnd="16dp"
                android:textColor="?attr/colorOnCustomGreenContainer"
                app:layout_constraintBottom_toBottomOf="@+id/lblTotalAmount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lblTotalAmount" />



        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="1234-1478-****-****"
                android:textAppearance="@style/TextAppearance.EcoShop.Body1"
                android:textColor="?attr/colorOnCustomGreenContainer"
                app:layout_constraintBottom_toBottomOf="@+id/lblCardNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lblCardNumber" />

            <TextView
                android:id="@+id/tvTrackingCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="123456789"
                android:textAppearance="@style/TextAppearance.EcoShop.Body1"
                android:textColor="?attr/colorOnCustomGreenContainer"
                app:layout_constraintBottom_toBottomOf="@+id/lblTrackingCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lblTrackingCode" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/lblTrackingCode"
            android:backgroundTint="?attr/colorOnCustomGreenContainer"
            android:id="@+id/btnCompleteTransaction"
            android:text="@string/complete_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>